--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tidyomicsWorkshopBioc2023
 Title: Tidy genomic and transcriptomic analyses 
-Version: 0.16.3
+Version: 0.16.4
 Authors@R: 
     c(
     person(given = "Stefano",
@@ -36,7 +36,9 @@ Imports:
     scales,
     batchelor,
     scater,
-    purrr
+    purrr,
+    ensembldb,
+    EnsDb.Hsapiens.v86
 Suggests:
     knitr,
     rmarkdown,
