--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ TidyGenomicsTranscriptomicsWorkshop_bioc2023.Rproj
 .DS_Store
 /doc/
 /Meta/
+
+vignettes/tidyomicsWorkshopBioc2023_cache/
+vignettes/tidyomicsWorkshopBioc2023_files/
