playing around with nesting on genomic tiles

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,8 @@ Imports:
     purrr,
     plyranges,
     ensembldb,
-    EnsDb.Hsapiens.v86
+    EnsDb.Hsapiens.v86,
+    forcats
 Suggests:
     knitr,
     rmarkdown,
