--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tidyomicsWorkshopBioc2023
 Title: Tidy genomic and transcriptomic analyses 
-Version: 0.16.7
+Version: 0.16.8
 Authors@R: 
     c(
     person(given = "Stefano",
@@ -41,7 +41,8 @@ Imports:
     plyranges,
     ensembldb,
     EnsDb.Hsapiens.v86,
-    forcats
+    forcats,
+    nullranges
 Suggests:
     knitr,
     rmarkdown,
