--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tidyomicsWorkshopBioc2023
-Title: Tidy genomic and transcriptomic analyses 
-Version: 0.16.8
+Title: Tidy genomic and transcriptomic single-cell analyses 
+Version: 0.16.9
 Authors@R: 
     c(
     person(given = "Stefano",
@@ -15,7 +15,8 @@ Authors@R:
            comment = c(ORCID = "0000-0001-8401-0545"))
 	   )
 Description: Workflow for BioC conference showing tidy genomic
-    and transcriptomic analyses.
+    and transcriptomic analyses, for a single-cell RNA-seq
+    application
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
