--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tidyomicsWorkshopBioc2023
 Title: Tidy genomic and transcriptomic single-cell analyses
-Version: 0.16.12
+Version: 0.16.13
 Authors@R: 
     c(
     person(given = "Stefano",
@@ -49,7 +49,7 @@ Suggests:
     rmarkdown,
     pkgdown
 Biarch: true
-URL: https://tidybiology.github.io/tidyomicsWorkshopBioc2023
-BugReports: https://github.com/tidybiology/tidyomicsWorkshopBioc2023/issues/new/choose
+URL: https://tidyomics.github.io/tidyomicsWorkshopBioc2023
+BugReports: https://github.com/tidyomics/tidyomicsWorkshopBioc2023/issues/new/choose
 VignetteBuilder: knitr
-DockerImage: ghcr.io/tidybiology/tidyomicsWorkshopBioc2023:latest
+DockerImage: ghcr.io/tidyomics/tidyomicsWorkshopBioc2023:latest
