--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,23 +27,39 @@ Depends:
     Biobase,
     R (>= 4.2.0)
 Imports:
-    SingleCellExperiment,
-    ggplot2,
-    plotly,
-    dplyr,
+    Banksy,
     colorspace,
+    cowplot,
+    CuratedAtlasQueryR,
     dittoSeq,
-    tidySingleCellExperiment,
-    tidySummarizedExperiment,
-    scales,
-    batchelor,
-    scater,
+    dplyr,
+    ExperimentHub,
+    ggalt,
+    ggplot2,
+    ggspavis,
+    glue,
+    here,
+    HDF5Array,
+    hoodscanR,
+    magrittr,
+    MoleculeExperiment,
+    plotly,
     purrr,
-    plyranges,
-    ensembldb,
-    EnsDb.Hsapiens.v86,
-    forcats,
-    nullranges
+    RColorBrewer,
+    scater,
+    scico,
+    scran,
+    SpatialExperiment,
+    spatialLIBD,
+    stringr,
+    SubcellularSpatialData,
+    tidybulk,
+    tidySingleCellExperiment,
+    tidySpatialExperiment,
+    tidySummarizedExperiment,
+    tidyverse,
+    SPOTlight,
+    Seurat
 Suggests:
     knitr,
     rmarkdown,
