--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Authors@R:
     c(
     person(given = "Stefano",
            family = "Mangiola",
-           role = c("aut"),
+           role = c("aut", "cre"),
            email = "mangiola.s@wehi.edu.au",
            comment = c(ORCID = "0000-0001-7474-836X"))
 	   )
@@ -17,7 +17,7 @@ Encoding: UTF-8
 LazyData: true
 LazyDataCompression: xz
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 Depends:
     Biobase,
     R (>= 4.2.0)
