--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -60,6 +60,7 @@ Suggests:
     rmarkdown,
     pkgdown
 Biarch: true
+Remotes: lmweber/ggspavis
 URL: https://tidyomics.github.io/tidySpatialWorkshop2024
 BugReports: https://github.com/tidyomics/tidySpatialWorkshop2024/issues/new/choose
 VignetteBuilder: knitr
